Align links in navbar. Fix button wrapping on mobile devices with small width.

--- a/src/pages/index.module.css
+++ b/src/pages/index.module.css
@@ -22,12 +22,13 @@
   display: flex;
   align-items: center;
   justify-content: center;
-  margin-bottom: 4rem;
+  flex-wrap: wrap;
+  flex-direction: row;
+  margin: 4rem 0;
 }
 
 .button {
-  margin-right: 1rem;
-  margin-left: 1rem;
+  margin: 8px 1rem 0;
 }
 
 .image {
